@@ -1,3 +1,15 @@
+2010-02-25  James Choi  <jchoi42@pha.jhu.edu>
+
+        Reviewed by David Levin.
+
+        Change hardcoded gcc paths to be Solaris friendly
+        https://bugs.webkit.org/show_bug.cgi?id=35213
+
+        * bindings/scripts/CodeGeneratorObjC.pm:
+        * bindings/scripts/IDLParser.pm:
+        * css/make-css-file-arrays.pl:
+        * dom/make_names.pl:
+
 2010-02-25  Xan Lopez  <xlopez@igalia.com>
 
         Reviewed by Gustavo Noronha.
